# assignment-plus-plus

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  DEMO.md  Dockerfile  FINAL_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  QUICK_START.md  README.md  SETUP.md  WORK_COMPLETED.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .env.example  alembic.ini  main.py  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0a2b229b51ce_initial_schema.py
backend/app/: __init__.py  database.py
backend/app/api/: deps.py
backend/app/core/: config.py  example_fixtures.py  security.py  state.py
backend/app/database/: connection.py
backend/app/models/: domain.py
backend/app/schemas/: schemas.py
backend/app/services/: analytics_engine.py  (+7 more)
backend/database/: init_db.py  schema.sql
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py  test_auth_courses.py  test_features.py
frontend/: .env.example  .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: AssignmentCard.tsx  BackgroundVideo.tsx  CourseCard.tsx  DashboardStats.tsx  FeedbackCard.tsx  FileUpload.tsx  GradeDisplay.tsx  Layout.tsx  LoadingSpinner.tsx  Navigation.tsx  NotificationBar.tsx  NotificationCenter.tsx  PlagiarismSelfCheck.tsx  RubricDisplay.tsx  Sidebar.tsx  SubmissionCard.tsx  SubmissionForm.tsx  SubmissionPolicyManager.tsx
frontend/lib/: api.ts  session.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  style-guide.tsx
frontend/styles/: globals.css
(+46 files in other folders)
