[project]
name = "assignment-plus-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic==2.7.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.2",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "argon2-cffi>=23.1.0",
]

[project.scripts]
dev = "python backend/main.py"
